<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:orientation="horizontal" >

    <ImageView
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/user"
        android:contentDescription="@string/ikon_kontak"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/tv_no_hp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/nomor_hp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </LinearLayout>

</LinearLayout>